优化了样式，将div的箭头更改为css

--- a/panda.html
+++ b/panda.html
@@ -9,11 +9,10 @@
     <style type="text/css">
         .card-wrapper {
             border: solid rgb(187, 187, 187) 1px;
-            width: 450px;
+            width: 100%;
             height: 550px;
             background: black;
             position: relative;
-            padding: 1em;
         }
 
         .card-wrapper .background {
@@ -222,15 +221,11 @@
             align-items: center;
             padding: 10px 5px;
             border-bottom: solid 1px rgba(255,255,255,0.15);
+            background: url('./page.svg') calc(100% - 8px) center no-repeat;
         }
 
         .card-wrapper .item:last-child{
             border-bottom: none;
-        }
-
-        .card-wrapper .logo {
-            display: flex;
-            flex-direction: row;
         }
 
         .card-wrapper .item .logo {
@@ -239,6 +234,8 @@
             width: 25px;
             height: 45px;
             border-radius: 10px;
+            display: flex;
+            flex-direction: row;
         }
 
         .card-wrapper .item .logo img {
@@ -252,7 +249,7 @@
             flex: 1 1 0;
         }
 
-        .card-wrapper .item .app-title h2 {
+        .card-wrapper .item h2 {
             margin: 0;
             font-size: 16px;
             color: #fff;
@@ -268,6 +265,9 @@
             flex-direction: row;
         }
 
+        .card-wrapper .item .details .currency {
+            padding-right:55px;
+        }
         .card-wrapper .item .details .currency span {
             color: #aaa;
         }
@@ -385,9 +385,6 @@
                         <div class="currency">
                             <span>13.49 GB</span>
                         </div>
-                        <div class="expand">
-                            <img src="./page.svg" alt="">
-                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -406,9 +403,6 @@
                         <div class="currency">
                             <span>7.47 GB</span>
                         </div>
-                        <div class="expand">
-                            <img src="./page.svg" alt="">
-                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -426,9 +420,6 @@
                     <div class="details">
                         <div class="currency">
                             <span>6.14 GB</span>
-                        </div>
-                        <div class="expand">
-                            <img src="./page.svg" alt="">
                         </div>
                     </div>
                 </div>
