--- a/panda.html
+++ b/panda.html
@@ -9,14 +9,17 @@
     <style type="text/css">
         .card-wrapper {
             border: solid rgb(187, 187, 187) 1px;
-            width: 100%;
+            width: 400px;
             height: 550px;
             background: black;
             position: relative;
+            padding:20px;
+            box-sizing: border-box;
         }
 
         .card-wrapper .background {
             background: rgb(39, 38, 38);
+            padding:5px 12px;
         }
 
         .card-wrapper .head {
@@ -58,7 +61,9 @@
         .card-wrapper .title .return {
             display: flex;
             flex-direction: row;
-            color: #0000FF;
+            color: #fff;
+            background: url('./angle-brackets.svg') 0 center no-repeat;
+            padding-left:22px;
         }
 
         .card-wrapper .title .return .brackets {
@@ -70,8 +75,9 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            margin: 0 0 0 30%;
             color: #fff;
+            box-sizing: border-box;
+            padding-left:34px ;
         }
 
         .card-wrapper .iPhone-disk {
@@ -276,6 +282,11 @@
 </head>
 
 <body>
+
+
+    <p style="border:solid 1px red;width:100px;height:100px;padding:10px;box-sizing: border-box;">
+        爱上对方了静安寺的发生的法术等级法律上的房间爱丽丝的肌肤阿拉斯加地方拉克丝的积分爱丽丝的肌肤盎司伦敦发
+    </p>
         <!-- https://github.com/pandawjmb/learn-html-css.git-->
 
     <div class="card-wrapper">
@@ -309,9 +320,6 @@
             </div>
             <div class="title">
                 <div class="return">
-                    <div class="brackets">
-                        <img src="./angle-brackets.svg" alt="">
-                    </div>
                     <div class="currency">
                         <span>通用</span>
                     </div>
