第三次提交

--- a/panda1iphone手机的存储空间页面/panda.html
+++ b/panda1iphone手机的存储空间页面/panda.html
@@ -282,6 +282,26 @@
 </head>
 
 <body>
+    <!--Windows PowerShell
+版权所有 (C) Microsoft Corporation。保留所有权利。
+
+PS C:\Users\Administrator\Documents\FrontEndLive> git add --all
+PS C:\Users\Administrator\Documents\FrontEndLive> git commit -m "第二次提交解决居中的iPhone储
+存空间居中的问题以及css的box-sizing: border-box;的padding-left:34px ;"
+[master b5bd6c0] 第二次提交解决居中的iPhone储存空间居中的问题以及css的box-sizing: border-box;的padding-left:34px ;
+ 2 files changed, 15 insertions(+), 7 deletions(-)
+PS C:\Users\Administrator\Documents\FrontEndLive> git push -u origin master
+Enumerating objects: 12, done.
+Counting objects: 100% (12/12), done.
+Delta compression using up to 8 threads
+Compressing objects: 100% (8/8), done.
+Writing objects: 100% (8/8), 1.46 KiB | 498.00 KiB/s, done.
+Total 8 (delta 6), reused 0 (delta 0)
+remote: Resolving deltas: 100% (6/6), completed with 4 local objects.
+To https://github.com/pandawjmb/learn-html-css.git
+   d9c3359..b5bd6c0  master -> master
+Branch 'master' set up to track remote branch 'master' from 'origin'.
+PS C:\Users\Administrator\Documents\FrontEndLive>-->
 
 
     <p style="border:solid 1px red;width:100px;height:100px;padding:10px;box-sizing: border-box;">
