--- a/panda2/panda.html
+++ b/panda2/panda.html
@@ -9,29 +9,126 @@
     <style type="text/css">
         .card-wrapper {
             border: solid red 1px;
-            width: 500px;
-            height: 500px;
+            width: 600px;
+            height: 600px;
+            position: relative;
         }
-        .card-wrapper .title{
+
+        .card-wrapper .title {
             display: flex;
             flex-direction: row;
+
         }
-        .card-wrapper .title .inputdemo{
+
+        .card-wrapper .title .inputdemo {
             margin-left: 38%;
             margin-top: 3%;
         }
+
         .card-wrapper .order-wrapper {
             display: flex;
             flex-direction: row;
+            color: rgb(18, 127, 216);
+            border-bottom: solid 1px rgba(255, 255, 255, 0.15);
+
         }
-        .card-wrapper .order-wrapper a{
+
+        .card-wrapper .order-wrapper a {
             display: flex;
             flex-direction: row;
-            margin:.5em .5em ;
+            margin: .5em .5em;
+            font-size: 12px;
             text-decoration: none;
         }
-        .card-wrapper .border{
-            border: solid rgb(187, 182, 182) .6px;
+
+        .card-wrapper .order-wrapper div a {
+            color: rgb(18, 127, 216);
+
+        }
+
+        .card-wrapper .order-details {
+            display: flex;
+            flex-direction: row;
+            margin: .5em .5em;
+            font-size: 12px;
+            text-decoration: none;
+        }
+
+        .card-wrapper .order-details .time span {
+            display: flex;
+            flex-direction: row;
+            margin: .2em .5em;
+            font-size: 12px;
+            text-decoration: none;
+        }
+
+        .card-wrapper .order-number .number {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .card-wrapper .order-number {
+            position: absolute;
+            margin: 1em 0 0 0;
+        }
+
+        .card-wrapper .order-number .number .order ul,
+        .card-wrapper .order-number .number .order li {
+            list-style: none;
+            font-size: 12px;
+        }
+
+        .card-wrapper .order-number .number .order ul.order {
+            position: relative;
+        }
+
+
+        .card-wrapper .order-number .number .order a {
+            text-decoration: none;
+            color: rgb(18, 127, 216);
+        }
+
+        .card-wrapper .order-number .books .description ul li,
+        .card-wrapper .order-number .books .description ul li a {
+            text-decoration: none;
+            list-style: none;
+            font-size: 12px;
+        }
+
+        .card-wrapper .order-number .books .description ul li a {
+            color: rgb(18, 127, 216);
+        }
+
+
+        .card-wrapper .books .logo-description {
+            display: flex;
+            flex-direction: row;
+            position: relative;
+            margin: 0 0 0 1em;
+        }
+
+        .card-wrapper .books .logo-description .logo {
+            position: absolute;
+            margin: 1em 0 0 1em;
+            border: solid red 1px;
+            width: 50px;
+            height: 50px;
+        }
+
+        .card-wrapper .books .logo-description .description {
+            position: absolute;
+            margin: 0 0 0 3em;
+        }
+
+        .card-wrapper .content-and-comments {
+            position: absolute;
+            position: relative;
+            margin: 1em 0 0 30em;
+        }
+
+        .card-wrapper .content-and-comments .comments {
+            position: absolute;
+            margin: .2em 0 0 0;
         }
     </style>
 </head>
@@ -43,10 +140,8 @@
                 <h3>我的订单</h3>
             </div>
             <div class="inputdemo">
-                <form action="/example/html/form_action.asp" method="get">
-                    <input type="text" maxlength="18" size="18" placeholder="搜索商品名称、类别或收件人"/>
-                    <input type="submit" value="搜索订单" class="color"/>
-                </form>
+                <input type="text" maxlength="18" size="18" placeholder="搜索商品名称、类别或收件人" />
+                <input type="submit" value="搜索订单" class="color" />
             </div>
         </div>
         <div class="order-wrapper">
@@ -60,6 +155,62 @@
                 <a href="#">已取消的订单</a>
             </div>
         </div>
+        <div class="order-details">
+            <div class="time">
+                <span><b>4个订单</b>时间下单时间为</span>
+            </div>
+            <div class="past">
+                <input type="submit" value="过去6个月" class="color" />
+            </div>
+        </div>
+        <div class="order-number">
+            <div class="number">
+                <div class="order">
+                    <ul>
+                        <li>已下订单</li>
+                        <li>2019年9月16日</li>
+                    </ul>
+                </div>
+                <div class="order">
+                    <ul>
+                        <li>总价</li>
+                        <li>￥&nbsp;&nbsp;1.99</li>
+                    </ul>
+                </div>
+                <div class="order">
+                    <div class="order">
+                        <ul>
+                            <li>订单编号 D01-8162850-8743819</li>
+                            <li><a href="#">查看订单详情(含支付信息)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">打印订单详情</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="books">
+                <div class="logo-description">
+                    <div class="logo">
+                    </div>
+                    <div class="description">
+                        <ul>
+                            <li><a href="#">曾国藩家书（慢读系列，李鸿章校勘，随文夹注版）</a></li>
+                            <li>曾国藩，李鸿章</li>
+                            <li>Kindle&nbsp;版</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="content-and-comments">
+                <div class="content">
+                    <input type="submit" value="内容和设备" class="color" />
+                </div>
+                <div class="comments">
+                    <input type="submit" value="撰写商品评论" class="color" />
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 
