--- a/panda2/panda.html
+++ b/panda2/panda.html
@@ -17,28 +17,43 @@
         .card-wrapper .title {
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
 
         }
 
-        .card-wrapper .title .inputdemo {
-            margin-left: 38%;
-            margin-top: 3%;
+        .card-wrapper .title>* {
+            border:solid 1px red;
+        }
+
+        
+        .card-wrapper .title .inputdemo input.keyword {
+            width:300px;
         }
 
         .card-wrapper .order-wrapper {
             display: flex;
             flex-direction: row;
             color: rgb(18, 127, 216);
-            border-bottom: solid 1px rgba(255, 255, 255, 0.15);
-
+            border-bottom: solid 1px rgb(192, 192, 192);
         }
 
         .card-wrapper .order-wrapper a {
             display: flex;
             flex-direction: row;
-            margin: .5em .5em;
             font-size: 12px;
             text-decoration: none;
+            padding: 5px 10px;
+            margin-right:12px;
+            position: relative;
+            top:1px;
+            color:#000;
+            transition: all 1s;
+            border-bottom: solid 4px transparent;
+        }
+
+        .card-wrapper .order-wrapper a.current {
+            border-bottom:solid 4px #f60;
         }
 
         .card-wrapper .order-wrapper div a {
@@ -67,15 +82,18 @@
             flex-direction: row;
         }
 
-        .card-wrapper .order-number {
-            position: absolute;
-            margin: 1em 0 0 0;
-        }
 
+        .card-wrapper .order-number .number .order {
+            padding:1em 1em;
+        }
         .card-wrapper .order-number .number .order ul,
         .card-wrapper .order-number .number .order li {
             list-style: none;
             font-size: 12px;
+            margin:0;padding:0;
+        }
+        .card-wrapper .order-number .order.summary {
+            flex:1 1 0;
         }
 
         .card-wrapper .order-number .number .order ul.order {
@@ -140,21 +158,31 @@
                 <h3>我的订单</h3>
             </div>
             <div class="inputdemo">
-                <input type="text" maxlength="18" size="18" placeholder="搜索商品名称、类别或收件人" />
+                <input type="text" class="keyword" maxlength="18" size="18" placeholder="搜索商品名称、类别或收件人" />
                 <input type="submit" value="搜索订单" class="color" />
             </div>
         </div>
         <div class="order-wrapper">
-            <div class="order">
-                <a href="#">订单</a>
-            </div>
-            <div class="unprocessed">
-                <a href="#">未处理或正在处理的订单</a>
-            </div>
-            <div class="cancel">
-                <a href="#">已取消的订单</a>
-            </div>
+            <a href="#" class="current">订单</a>
+            <a href="#">未处理或正在处理的订单</a>
+            <a href="#">已取消的订单</a>
         </div>
+
+        <script>
+            var order = document.querySelector(`.order-wrapper`)
+            order.addEventListener('click',function(event){
+                if(event.target.nodeName!=='A') {
+                    return
+                }
+               let a = order.querySelectorAll('a')
+               for(let i=0;i<a.length;i++){
+                   a[i].className=''
+               }
+               event.target.className = 'current'
+            })
+        
+        </script>
+
         <div class="order-details">
             <div class="time">
                 <span><b>4个订单</b>时间下单时间为</span>
@@ -171,20 +199,18 @@
                         <li>2019年9月16日</li>
                     </ul>
                 </div>
-                <div class="order">
+                <div class="order summary">
                     <ul>
                         <li>总价</li>
                         <li>￥&nbsp;&nbsp;1.99</li>
                     </ul>
                 </div>
                 <div class="order">
-                    <div class="order">
                         <ul>
                             <li>订单编号 D01-8162850-8743819</li>
                             <li><a href="#">查看订单详情(含支付信息)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">打印订单详情</a>
                             </li>
                         </ul>
-                    </div>
 
                 </div>
             </div>
