--- a/panda3Taobaodkdj/panda.html
+++ b/panda3Taobaodkdj/panda.html
@@ -11,6 +11,7 @@
     .card-wrapper {
         font-size: 12px;
         min-width: 1120px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     .card-wrapper .order {
         display: flex;
